[package]
name = "sui-package-resolver"
version = "0.1.0"
edition = "2021"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
bcs.workspace = true
lru.workspace = true
diesel.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
rocksdb.workspace = true
sui-types.workspace = true
thiserror.workspace = true
sui-indexer.workspace = true
sui-rest-api.workspace = true
tokio.workspace = true
typed-store-derive.workspace = true
typed-store.workspace = true
eyre.workspace = true
serde.workspace = true
tempfile.workspace = true


[dev-dependencies]
expect-test.workspace = true
hyper.workspace = true
insta.workspace = true
move-compiler.workspace = true
serde_json.workspace = true
sui-move-build.workspace = true
tower.workspace = true

[features]
pg_integration = []
